v4.3.0
- implement v5 timeshifting
- improve playback of in progress recordings
- added original air date as firstAired
- live and new flags modify firstAired
- added Advanced Recording type
- Add genres to recordings (Kodi bug doesn't display them)
- can force delete of all channel icons from the setup screen
- added the sid to recordings
- removed forced (YEAR) from EPG titles, Kodi V19 does this now.
- reintroduce XMLUtils makes the parsing code easier to read.
- continue to change c to c++
- fixed bug passing empty group titles to Kodi (kodi bug)

v4.2.0
- Recompile for 6.1.0 PVR Addon API compatibility

v4.1.1
- Update build system version and cleanup
- Fix package check for JsonCpp
- Added AppVeyor for Windows related build tests

v4.1.0
- Update to GUI addon API v5.14.0

v4.0.0
- Update to PVR addon API v6.0.0

v3.3.15
- CreateThread() change
- Move LiveStreams.xml to only load once
- Changes for NextPVR v5

v3.3.14
- Fixed issue with art not showing up on recordings from deleted channels
- New settings option to enabled Kodi style recordings - defaults to NextPVR style (no title, with S/E )
- Reduce channel tuning time in Extended Timeshift
- Removed trigger on deletes causing Kodi crash
- Adjust for server time difference loading instant recordings (could show as scheduled)
- Clean up MAC address logic, no WOL for localhost
- Allow Kodi plugin:// URL in LiveStreams.xml

v3.3.13
- Add Extended Timeshift Rolling File based live tv and radio buffer (pause and seekable)
- Use file-system for recording and rolling file playback if available
- Removed GetBackendTime() not part of API, changed RenameRecordings not supported
- Fixed radio playback with timeshift, All Channel recurring recordings, problems passing expired EPG ID's
- Fixed URL encoding of recording directory virtual name.
- Separate and show Failed recordings, added Conflict Timers
- Disable backend updates during media playback.  Kodi still will update if configured